# the-reflex

./: .gitignore  AUDIT_THE-REFLEX.md  DO_THIS_NEXT.md  PAP_PAPER.md  README.md  ROADMAP.md  SILICON_GRAIL_EXECUTION_SUMMARY.md  TECHNICAL_REALITY.md  WHITEPAPER.md  the-reflex-tvdb.md
.factory/droids/: reflex-applications.yaml  reflex-architecture.yaml  reflex-implementation.yaml  reflex-metrics.yaml  reflex-pitch.yaml  reflex-problem.yaml  reflex-readiness.yaml  reflex-ros2.yaml  reflex-sales.yaml  reflex-solution.yaml  reflex-support.yaml  reflex-team.yaml
data/apr11_2026/: SUMMARY.md
docs/: AUDIT_APRIL_2026.md  C6_ACTUAL_TOPOLOGY.md  CNS_TOPOLOGY.md  CURRENT_STATUS.md  DELTA_STILLNESS_BRIDGE.md  DEMO_QUICKREF.md  FALSIFICATION_C6.md  FALSIFICATION_COMPLETE.md  HARDWARE_INVENTORY.md  HARDWARE_TOPOLOGY.md  KINETIC_ATTENTION.md  LAYERED_EXPLORATION_FINDINGS.md  LCACHE_REFLEX_OPCODES.md  LCACHE_TEST14C_SIM.md  LCACHE_TEST14C_SIM_RESULTS.md  LINCOLN_MANIFOLD_BLINDSPOTS_NODES.md  LINCOLN_MANIFOLD_BLINDSPOTS_REFLECT.md  LINCOLN_MANIFOLD_CLAUDE_RAW.md  LINCOLN_MANIFOLD_CLAUDE_REFLECT.md  LINCOLN_MANIFOLD_CLAUDE_SYNTH.md  LINCOLN_MANIFOLD_EMBODIED_C6_NODES.md  LINCOLN_MANIFOLD_EMBODIED_C6_REFLECT.md  LINCOLN_MANIFOLD_EMBODIED_C6_SYNTH.md  LINCOLN_MANIFOLD_ENTROPY_FIELD_RAW.md  LINCOLN_MANIFOLD_ENTROPY_FIELD_SYNTH.md  LINCOLN_MANIFOLD_REFLEX_BECOMES_C6_RAW.md  LINCOLN_MANIFOLD_REFLEX_OS_REFLECT.md  LINCOLN_MANIFOLD_SELF_COMPOSING_INTELLIGENCE_RAW.md  LINCOLN_MANIFOLD_SELF_COMPOSING_INTELLIGENCE_REFLECT.md  LINCOLN_MANIFOLD_ULTIMATE_SUBSTRATE_NODES.md  LINCOLN_MANIFOLD_ULTIMATE_SUBSTRATE_RAW.md  LINCOLN_MANIFOLD_ULTIMATE_SUBSTRATE_SYNTH.md  LINCOLN_MANIFOLD_VOXEL_AWARENESS_RAW.md  LMM_EQPROP_EMERGENCE.md  LMM_VALENTINE_PHASE3.md  MEMORY_MODULATED_ATTENTION.md  MILESTONE_PROGRESSION.md  MNEMO_PRIOR_SIGNAL_GAPS.md  MTFP21_TIMING_ENCODING.md  NEXT_STEPS.md  (+36 more)
embedded/: CMakeLists.txt  bench_liquid_ship.c  sdkconfig  sdkconfig.defaults  test_spline.c
embedded/main/: CMakeLists.txt  autonomous_loop.c  cfc_demo.c  cfc_parallel_dot.c  cfc_spine_demo.c  espnow_sender.c  etm_chained_multiply.c  etm_stream_demo.c  falsify_cfc_parallel.c  falsify_silicon_grail.c  falsify_turing_completeness.c  gdma_debug_test.c  geometry_cfc_20mhz.c  geometry_cfc_freerun.c  geometry_layer.c  gie_engine.c  hologram_mesh_demo.c  hologram_q15_demo.c  liquid_ship_demo.c  main.c  multi_peripheral_etm.c  reflex_espnow.c  reflex_vdb.c  shift_add_overflow.c  silicon_grail_cpu_free.c  single_ledc_etm_test.c  sleep_fabric.c  spectral_double_cfc.c  spectral_ffn.c  spine_main.c  spine_summit.c  temporal_voxel.c  test_espnow.c  test_gie_core.c  test_harness.h  test_hebbian.c  test_kinetic.c  test_live_input.c  test_lp_char.c  test_memory.c  (+1 more)
embedded/main/ulp/: main.S  main.c
embedded/main/ulp/archive/: main_c_reference.c
embedded/tools/: Makefile  (+3 more)
figures/: generate_paper_figures.py
journal/: apr8_findings_nodes.md  apr8_findings_raw.md  apr8_findings_reflect.md  apr8_findings_synth.md  claude_closing_nodes.md  claude_closing_raw.md  claude_closing_reflect.md  claude_closing_synth.md  claude_reflections_nodes.md  claude_reflections_raw.md  claude_reflections_reflect.md  claude_reflections_synth.md  claude_session_end_nodes.md  claude_session_end_raw.md  claude_session_end_reflect.md  claude_session_end_synth.md  hebbian_diagnosis_nodes.md  hebbian_diagnosis_raw.md  hebbian_diagnosis_reflect.md  hebbian_diagnosis_synth.md  kinetic_attention_nodes.md  kinetic_attention_raw.md  kinetic_attention_reflect.md  kinetic_attention_synth.md  kinetic_reliability_nodes.md  kinetic_reliability_raw.md  kinetic_reliability_reflect.md  kinetic_reliability_synth.md  mtfp21_timing_nodes.md  mtfp21_timing_raw.md  mtfp21_timing_reflect.md  mtfp21_timing_synth.md  next_step_change_nodes.md  next_step_change_raw.md  next_step_change_reflect.md  next_step_change_synth.md  open_risks_nodes.md  open_risks_raw.md  open_risks_reflect.md  open_risks_synth.md  (+52 more)
notebooks/: stigmergy_demo.ipynb
notes/: LMM_SUBSTRATE_DISCOVERY.md  What Can Be Done with a 256-Trit Dot Product Engine, 12.5 ns ETM Layer, and 50 Channels on an ESP32-C6_.md  crystals-and-agency.md  pi4-vulkan-warnings.md  reflex-add-delta-observer.md  reflex-horizon.md  reflex-in-space.md  reflex-mamba-footprints.md  reflex-open-core-model.md  reflex-unfinished.md  verification_525bbc4_to_head.md
papers/: stratum1_vdb_temporal_context.tex  stratum2_cls_architecture.tex  stratum3_prior_signal_separation.tex
primitive/: README.md
reflex-deploy/: README.md  pytest.ini  setup.py
reflex-os/: README.md  TURING_FABRIC.md  sdkconfig  sdkconfig.defaults
reflex-os/main/: CMakeLists.txt  alu_fabric.c  autonomous_alu.c  cfc_demo.c  cfc_dual_channel.c  embody_main.c  etm_fabric_demo.c  etm_fabric_phase1.c  fabric_cfc_demo.c  falsify_gdma_simple.c  falsify_gdma_v2.c  falsify_silicon_grail_v3.c  geometry_cfc.c  geometry_cfc_10mhz.c  geometry_cfc_diff.c  geometry_cfc_freerun.c  geometry_cfc_m8.c  geometry_cfc_m8_etm.c  geometry_dot.c  hologram_demo.c  hologram_q15_demo.c  layers_main.c  main.c  minimal_etm_test.c  multi_channel_gdma.c  parallel_dot_product.c  parallel_pcnt.c  pulse_matmul_poc.c  raid_etm_fabric.c  reflex_fault.c  reflex_substrate.c  reflex_substrate_stream.c  reflex_vdb.c  shift_add_8bit.c  shift_add_multiply.c  silicon_grail_wired.c  spectral_eqprop.c  spine_bare.c  state_machine_fabric.c  substrate_main.c  (+5 more)
reflex-os/main/ulp/: main.S
reflex-robotics/: Makefile  README.md
reflex_ros_bridge/: CMakeLists.txt  README.md  package.xml  reflex_force_control.c
reflex_ros_bridge/demo/: force_demo.py
reflex_ros_bridge/launch/: bridge.launch.py
reflex_ros_bridge/scripts/: telemetry_dashboard.py
reflex_ros_bridge/src/: force_simulator_node.cpp  telemetry_node.cpp
results/: thor_results.md
robotics/: Makefile
ros2/: CMakeLists.txt  reflex_force_control.c
sim/: Makefile  test14c.c
src/: e1_coordination_v3.c  e2b_false_sharing.c  e3_latency_comparison.c  platform.h
tools/: refactor_tests.py  requirements.txt  rerun_etm_monitor.py  rerun_receiver.py  seed_sweep.py
(+255 files in other folders)
